@@ -1,5 +1,6 @@
 package com.example.pokemonapp.controllers;
 
+import com.example.pokemonapp.dto.PagedResponse;
 import com.example.pokemonapp.dto.PokemonDTO;
 import com.example.pokemonapp.entities.Collection;
 import com.example.pokemonapp.entities.Dresseur;
@@ -7,12 +8,14 @@ import com.example.pokemonapp.entities.Pokemon;
 import com.example.pokemonapp.repositories.CollectionRepository;
 import com.example.pokemonapp.repositories.DresseurRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
@@ -25,17 +28,26 @@ public class PokemonController {
     @Autowired
     private CollectionRepository collectionRepo;
 
+    /**
+     * Récupérer les Pokémon du dresseur connecté avec pagination
+     * @param authentication : info JWT du dresseur
+     * @param page : numéro de page (0 par défaut)
+     * @param size : nombre d’éléments par page (20 par défaut)
+     */
     @GetMapping("/pokemons")
-    public List<PokemonDTO> getMyPokemons(Authentication authentication) {
+    public PagedResponse<PokemonDTO> getMyPokemons(
+            Authentication authentication,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size
+    ) {
         String username = authentication.getName();
         Dresseur d = dresseurRepo.findByUsername(username).orElseThrow();
 
-        List<Pokemon> mesPokemons = collectionRepo.findByDresseur(d).stream()
-                .map(Collection::getCarte)
-                .collect(Collectors.toList());
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Collection> mesCollections = collectionRepo.findByDresseur(d, pageable);
 
-        // Inclure l'ID dans le DTO
-        return mesPokemons.stream()
+        List<PokemonDTO> pokemons = mesCollections.stream()
+                .map(Collection::getCarte)
                 .map(p -> new PokemonDTO(
                         p.getId(),
                         p.getNom(),
@@ -46,17 +58,25 @@ public class PokemonController {
                         p.getRarete(),
                         p.getImageUrl()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PagedResponse<>(
+                pokemons,
+                mesCollections.getNumber(),
+                mesCollections.getSize(),
+                mesCollections.getTotalElements(),
+                mesCollections.getTotalPages()
+        );
     }
 
-
+    /**
+     * Supprimer un Pokémon du dresseur connecté
+     */
     @DeleteMapping("/pokemons/{id}")
     public ResponseEntity<Void> deletePokemon(@PathVariable Long id, Authentication authentication) {
         String username = authentication.getName();
         Dresseur d = dresseurRepo.findByUsername(username).orElseThrow();
-
         collectionRepo.deleteByCarteIdAndDresseur(id, d);
         return ResponseEntity.noContent().build();
     }
-
 }
